Add error_prone rules on Loganalysis
Fix warnings of current rules.

Test: local build and error prone
Bug: 35864476
Change-Id: Ib03b309de69e9c92cf815440bb637b955447847e